Image/Top-Border Z-Index fix
Former-commit-id: c3a46ac7eef14cee2e34a9b268c5562265947d9f
Former-commit-id: cd27d0c5e81deb07f4aee59290e1da95e5595acb [formerly b7d58ad55489ab3a061c747da5dc810fe1c0a71e]
Former-commit-id: 59236d567591a4f2ce198b2c464c38162569df78

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -25,6 +25,7 @@ body
 	font-family 'Alegreya', serif
 	color #5d5d5d
 	font-weight 400
+	z-index 1
 	&:before
 		content ""
 		position fixed
@@ -81,6 +82,7 @@ a
 
 img
 	border-radius 6px
+	z-index 0
 
 hr
 	color rgba(209, 209, 209, 0.47)
